--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             <p>Professional portfolio website built with HTML, CSS, JavaScript, and Bootstrap featuring
                                 responsive design, smooth scrolling navigation, and interactive contact form.</p>
                             <div class="project-links">
-                                <a href="https://github.com/iluckymehta/LuckyPortfolio.git"
+                                <a href="https://github.com/iluckymehta/portfolio.git" target="_blank"
                                     class="btn btn-sm btn-outline-dark">
                                     <i class="fab fa-github me-1"></i>Code
                                 </a>
