--- a/index.html
+++ b/index.html
@@ -167,12 +167,27 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="project-card">
                         <div class="project-content">
-                            <h5>Perfume Shop Website</h5>
-                            <p>Created a multi-page perfume shop website using React.js and CSS with smooth navigation
+                            <h5>Portfolio Website</h5>
+                            <p>Professional portfolio website built with HTML, CSS, JavaScript, and Bootstrap featuring
+                                responsive design, smooth scrolling navigation, and interactive contact form.</p>
+                            <div class="project-links">
+                                <a href="https://github.com/iluckymehta/portfolio.git" target="_blank"
+                                    class="btn btn-sm btn-outline-dark">
+                                    <i class="fab fa-github me-1"></i>Code
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="project-card">
+                        <div class="project-content">
+                            <h5>Perfume & Jewellery shop website (frontend)</h5>
+                            <p>Created a multi-page perfume & jewellery shop website using React.js and CSS with smooth navigation
                                 and clean design. Pages included Home, About, Shop, and Contact with an interactive
                                 contact form built using React.</p>
                             <div class="project-links">
-                                <a href="#" class="btn btn-sm btn-outline-dark">
+                                <a href="https://github.com/iluckymehta/PerfumeJewelleryShopwebsite.git" class="btn btn-sm btn-outline-dark">
                                     <i class="fab fa-github me-1"></i>Code
                                 </a>
                             </div>
@@ -198,27 +213,12 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="project-card">
                         <div class="project-content">
-                            <h5>Student Management System</h5>
-                            <p>Built a web-based student management app in Django with features to add, edit, and delete
-                                student info. Displayed records in a clean table format with update/delete buttons for
-                                each entry.</p>
+                            <h5>Library Management System</h5>
+                            <p>Built using PHP, MySQL, HTML, CSS, and JavaScript with secure login/signup and book
+                                management (CRUD with search, sort, pagination).
+                                Enhanced usability with a responsive UI and smooth backend integration on XAMPP. </p>
                             <div class="project-links">
-                                <a href="#" class="btn btn-sm btn-outline-dark">
-                                    <i class="fab fa-github me-1"></i>Code
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="project-card">
-                        <div class="project-content">
-                            <h5>Portfolio Website</h5>
-                            <p>Professional portfolio website built with HTML, CSS, JavaScript, and Bootstrap featuring
-                                responsive design, smooth scrolling navigation, and interactive contact form.</p>
-                            <div class="project-links">
-                                <a href="https://github.com/iluckymehta/portfolio.git" target="_blank"
-                                    class="btn btn-sm btn-outline-dark">
+                                <a href="https://github.com/iluckymehta/lms.git" class="btn btn-sm btn-outline-dark">
                                     <i class="fab fa-github me-1"></i>Code
                                 </a>
                             </div>
