--- a/index.html
+++ b/index.html
@@ -135,6 +135,15 @@
                 <div class="col-md-6 col-lg-4 mb-4">
                     <div class="skill-card">
                         <div class="skill-icon">
+                            <i class="fas fa-desktop"></i>
+                        </div>
+                        <h5>Virtualization Tools</h5>
+                        <p>Hyper-V, VMware Workstation (Virtual Machine creation & management)</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="skill-card">
+                        <div class="skill-icon">
                             <i class="fas fa-chart-bar"></i>
                         </div>
                         <h5>Version Control</h5>
@@ -183,11 +192,13 @@
                     <div class="project-card">
                         <div class="project-content">
                             <h5>Perfume & Jewellery shop website (frontend)</h5>
-                            <p>Created a multi-page perfume & jewellery shop website using React.js and CSS with smooth navigation
+                            <p>Created a multi-page perfume & jewellery shop website using React.js and CSS with smooth
+                                navigation
                                 and clean design. Pages included Home, About, Shop, and Contact with an interactive
                                 contact form built using React.</p>
                             <div class="project-links">
-                                <a href="https://github.com/iluckymehta/PerfumeJewelleryShopwebsite.git" class="btn btn-sm btn-outline-dark">
+                                <a href="https://github.com/iluckymehta/PerfumeJewelleryShopwebsite.git"
+                                    class="btn btn-sm btn-outline-dark">
                                     <i class="fab fa-github me-1"></i>Code
                                 </a>
                             </div>
